objects/SVMXC__SPM_Mean_Time_To_Complete__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>This custom object is used to capture the Mean Time To Complete the work order details.</description>
    <fields>
        <fullName>SVMXC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete_del1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Calculation_Method__c</fullName>
        <description>This field is used to capture calculation method.</description>
        <inlineHelpText>This field is used to capture calculation method.</inlineHelpText>
        <label>Calculation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Case</description>
        <inlineHelpText>Lookup to Case</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completion_Time__c</fullName>
        <label>Completion Time (In Mins)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_Name__c</fullName>
        <description>This field is used to capture configuration name.</description>
        <inlineHelpText>This field is used to capture configuration name.</inlineHelpText>
        <label>Configuration Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Primary Work Order</description>
        <inlineHelpText>Lookup to Primary Work Order</inlineHelpText>
        <label>Primary Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete (Primary Work Order)</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Delivered_On__c</fullName>
        <label>Service Delivered On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Request</description>
        <inlineHelpText>Lookup to Service Request</inlineHelpText>
        <label>Service Request</label>
        <referenceTo>SVMXC__Service_Request__c</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
        <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SPM - Mean Time To Complete</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Mean Time To Complete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>